--- a/htdocs/ContactUs.html
+++ b/htdocs/ContactUs.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="HTML, CSS, JavaScript"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="../css/ContactUS_CSS.css"> 
+		<link rel="stylesheet" href="../css/ContactUs_CSS.css"> 
 		
 	</head>
 	
