--- a/htdocs/Facilities.html
+++ b/htdocs/Facilities.html
@@ -31,7 +31,44 @@
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 			<hr id = "rectangle1">
 		</header>
+
+		<section class = "equipments"><!--Provided Equipments List-->
+			<p><span>Provided equipments include:</span><br>
+				• Sound System<br>
+				• Projector and Projector Screen<br>
+				• Whiteboard<br>
+				• Tables and Chairs<br>
+				• Wi-Fi Access<br>
+			</p>	
+		</section>
 		
+		<section class = "FunctionHalls"><!--Function Halls-->
+			<section class = "FunctionHallsBody"><!--Description of Function Halls-->
+			<br><br><br>
+				<div id = "MedHallBody">
+					<p><h1>Medium Hall</h1>
+					<span>60 pax Capacity</span><br><br>
+					Php 2,000 per hour (minimum of 3 hours)<br>
+					Php 15,000 for 8 hours (8am-5pm)</p><br><br>
+				</div>
+				<div id = "BigHallBody">
+					<p><h1>Big Hall</h1>
+					<span>90 pax Capacity</span><br><br>
+					Php 3,000 per hour (minimum of 3 hours)<br>
+					Php 23,000 for 8 hours (8am-5pm)</p>
+				</div>
+			</section>
+			
+			<section class = "FunctionHallsImg"><!--Images of Function Halls-->
+				<img id = "MedHall" src="../images/Medium_Hall.jpg">
+				<img id = "BigHall" src="../images/Big_Hall.jpg">
+			</section>
+		</section>
+		
+		<!--Contact Us Button-->
+		<div id = "buttonbg">
+			<center><button><a href="ContactUs.html"> Inquiries and reservations </a></button><center>
+		</div>
 		
 		<footer> <!--(*keep consistent for all subpages)-->
 			<br><br><br><br>
